Dont Repeat Yourself

--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,7 +1,7 @@
 <% if current_page.first? %>
   <li class="page-item" style="opacity: 0">
-    <%= link_to "<<前", url, rel: 'prev', remote: remote, class: 'page-link' %>  </li>
+    <%= link_to "＜", url, rel: 'prev', remote: remote, class: 'page-link' %>  </li>
 <% else %>
   <li class="page-item">
-    <%= link_to "<<前", url, rel: 'prev', remote: remote, class: 'page-link' %>  </li>
+    <%= link_to "＜", url, rel: 'prev', remote: remote, class: 'page-link' %>  </li>
 <% end %>
