--- a/app/views/kaminari/_first_page.html.erb
+++ b/app/views/kaminari/_first_page.html.erb
@@ -1,9 +1,9 @@
 <% if current_page.first? %>
   <li class="page-item" style="opacity: 0">
-    <%= link_to "最初", url, remote: remote, class: 'page-link' %>
+    <%= link_to "≪", url, remote: remote, class: 'page-link' %>
   </li>
 <% else %>
   <li class="page-item">
-    <%= link_to "最初", url, remote: remote, class: 'page-link' %>
+    <%= link_to "≪", url, remote: remote, class: 'page-link' %>
   </li>
 <% end %>
