--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -1,3 +1,3 @@
 <li class='page-item disabled'>
-  <%= link_to "...", '#', class: 'page-link' %>
+  <%= link_to "…", '#', class: 'page-link' %>
 </li>
