--- a/app/views/layouts/_pagenate.html.erb
+++ b/app/views/layouts/_pagenate.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <div class="col-sm"></div>
-  <div class="col-sm">
+  <div class="col"></div>
+  <div class="col">
     <%= paginate pagenate %>
   </div>
-  <div class="col-sm"></div>
+  <div class="col"></div>
 </div>
