裏ボスのリンクと格闘中

--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -6,37 +6,34 @@
         <div class="sender my-1 p-1">
           <div class="messages">
            <% start = message.content.index("http")%>
-            <% if start != nil %>
-
+            <div>
+              <% if start != nil %>
                 <% messages = message.content %>
-<% while start != nil do%>
-                    <% ends = messages.index("\n",start) %>
-                      <% url = messages[start.to_i..ends.to_i - 1] %>
-                    <% if start == 0 %>
-                      <% messages = messages.gsub("#{url}","") %>
-                      <span>
-                         <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
-                        <%=safe_join(messages.split("\n"),tag(:br))%>
-                      </span>
-                  <% start = messages.index("http")%>
-
-                    <% else %>
-                      <% first = messages[0..start.to_i-1] %>
-                      <% messages = messages.gsub("#{first}", "").gsub("#{url}", "") %>
-                      <span>
-                        <%= safe_join(first.split("\n"),tag(:br)) %><br>
-                         <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
-                        <% start = messages.index("http")%>
-                        <% if start == nil %>
-                          <%= safe_join(messages.split("\n"),tag(:br))%> nil
-                        <% end %>
-                        <%= start %>
-                       </span>
+                <% while start != nil do%>
+                  <% ends = messages.index(/\r\n|\r|\n|\s|\t/,start) %>
+                  <% url = messages[start.to_i..ends.to_i - 1] %>
+                  <% if start == 0 %>
+                    <% messages = messages.sub("#{url}","") %>
+                    <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
+                    <% start = messages.index("http")%>
+                    <% if start == nil %>
+                      <%= safe_join(messages.split("\n"),tag(:br))%>
                     <% end %>
-<% end %>
+                  <% else %>
+                    <% first = messages[0..start.to_i-1] %>
+                    <% messages = messages.sub("#{first}", "").sub("#{url}", "") %>
+                    <%= safe_join(first.split("\n"),tag(:br)) %><br>
+                    <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
+                    <% start = messages.index("http")%>
+                    <% if start == nil %>
+                      <%= safe_join(messages.split("\n"),tag(:br))%>
+                    <% end %>
+                   <% end %>
+                <% end %>
             <% else %>
             <%=safe_join(message.content.split("\n"),tag(:br))%>
             <% end %>
+            </div>
           </div>
         </div>
       </div>
@@ -52,23 +49,41 @@
         <div class="receiver my-1 p-1">
           <div class="messages">
             <% start = message.content.index("http")%>
-            <% if start != nil %>
-              <% url = message.content.sub(/\r\n.*|\r.*|\n.*|\s.*|\t.*/m, "") %>
-              <% messages = message.content.gsub(/#{url}/,"") %>
-              <span>
-                <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
-                <%=safe_join(messages.split("\n"),tag(:br))%>
-              </span>
-            <% else %>
-              <%=safe_join(message.content.split("\n"),tag(:br))%>
-            <% end %>
+            <div>
+              <% if start != nil %>
+                <% messages = message.content %>
+                <% while start != nil do%>
+                  <% ends = messages.index(/\r\n|\r|\n|\s|\t/,start) %>
+                  <% url = messages[start.to_i..ends.to_i - 1] %>
+                  <% if start == 0 %>
+                    <% messages = messages.sub("#{url}","") %>
+                    <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
+                    <% start = messages.index("http")%>
+                    <% if start == nil %>
+                      <%= safe_join(messages.split("\n"),tag(:br))%>
+                    <% end %>
+                  <% else %>
+                    <% first = messages[0..start.to_i-1] %>
+                    <% messages = messages.sub("#{first}", "").sub("#{url}", "") %>
+                    <%= safe_join(first.split("\n"),tag(:br)) %><br>
+                    <a href="<%= url %>" target="_blank" rel="noopener noreferrer"><%= url %></a>
+                    <% start = messages.index("http")%>
+                    <% if start == nil %>
+                      <%= safe_join(messages.split("\n"),tag(:br))%>
+                    <% end %>
+                  <% end %>
+                <% end %>
+              <% else %>
+                <%=safe_join(message.content.split("\n"),tag(:br))%>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
       <% if message.created_at.to_date === Date.today %>
-        <span class="text-gray small"><%= message.created_at.strftime("今日 %H:%M") %></span>
+        <span class="text-gray small" style="text-align: right"><%= message.created_at.strftime("今日 %H:%M") %></span>
       <% else %>
-        <span class="text-gray small"><%= message.created_at.strftime("%H:%M") %></span>
+        <span class="text-gray small" style="text-align: right"><%= message.created_at.strftime("%H:%M") %></span>
       <% end %>
     </div>
   <% end %>
