--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,10 +1,7 @@
-<h3 class="text-center">通知</h3>
-<%= link_to "通知削除", notifications_path(@notifications), method: :delete ,class: "fas fa-trash" %>
-<% if @notifications.exists? %>
-  <div class="notification-index">
-    <%= render @notifications %>
-  </div>
-<% else %>
-
-  <p>通知はありません</p>
-<% end %>
+<% notifications = @notifications.where.not(visitor_id: current_user.id) %>
+ <% if notifications.exists? %>
+ <%= render notifications %>
+ <%= paginate notifications %>
+ <% else %>
+<p>通知はありません</p>
+<%end %>
