--- a/app/views/pages/_user.html.erb
+++ b/app/views/pages/_user.html.erb
@@ -2,11 +2,7 @@
   <%= link_to profile_path(user.userid) do %>
     <div class="d-flex justify-content-between">
       <div class="d-flex text-muted pt-3">
-        <% if user.image.nil? %>
-          <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-        <% else %>
-          <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-        <% end %>
+        <%= image_tag user.decorate.image , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
         <p class="pb-3 mb-0 small lh-sm w-100">
           <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
           @<%= user.userid %>
