--- a/app/views/communities/_user.html.erb
+++ b/app/views/communities/_user.html.erb
@@ -3,11 +3,7 @@
     <div class="my-3 p-2 bg-white rounded shadow-sm">
       <div class="d-flex justify-content-between">
         <div class="d-flex text-muted pt-3">
-          <% if user.user.image.nil? %>
-            <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
-          <% else %>
-            <%= image_tag "/user_images/#{user.user.image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
-          <% end %>
+            <%= image_tag user.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
           <p class="pb-3 mb-0 small lh-sm  w-100">
             <strong class="d-block text-gray-dark"><%= user.user.name %> (<%= user.user.nickname %>)</strong>
             @<%= user.user.userid %>
