--- a/app/views/communities/banned_member.html.erb
+++ b/app/views/communities/banned_member.html.erb
@@ -9,11 +9,7 @@
         <div class="my-3 p-2 bg-white rounded shadow-sm">
           <div class="d-flex justify-content-between">
             <div class="d-flex text-muted pt-3">
-              <% if m.user.image.nil? %>
-                <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
-              <% else %>
-                <%= image_tag "/user_images/#{m.user.image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
-              <% end %>
+              <%= image_tag m.user.decorate.image, class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
               <p class="pb-3 mb-0 small lh-sm  w-100">
                 <strong class="d-block text-gray-dark"><%= m.user.name %> (<%= m.user.nickname %>)</strong>
                 @<%= m.user.userid %>
