--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,15 +1,13 @@
 <% if resource.errors.any? %>
   <div id="error_explanation">
     <h4>
-      <%= I18n.t("errors.messages.not_saved",
+      <li><%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
-       %>
+      %></li>
     </h4>
-    <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+       <%= message %>
       <% end %>
-    </ul>
   </div>
 <% end %>
