--- a/app/assets/stylesheets/timelines.scss
+++ b/app/assets/stylesheets/timelines.scss
@@ -125,3 +125,14 @@ a{
   box-shadow: 0 0 0 4px rgba(35, 167, 195, 0.3);
   outline: 0;
 }
+
+.lity {
+  z-index: 10002;
+}
+
+.send {
+  margin-right: 2px;
+  margin-bottom: 2px;
+  color: #0d6efd;
+  border: none;
+}
