--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -1,78 +1,80 @@
-<body class="bg-light">
-  <div class="container" style="max-width: 960px">
-    <main>
-      <div class="py-5 text-center">
-        <%= image_tag "/user_images/default_icon.png" , class: "d-block mx-auto mb-4",width: "100" %>
-        <h2>新規登録</h2>
-        <p class="lead">Amicaへようこそ！<br/>Amicaを利用する前にあなたのことを教えて下さい！</p>
-      </div>
-      <p><%= devise_error_messages! %></p>
-      <%= form_for(resource, as: resource_name, url: users_confirm_path) do |f| %>
+<style>
+  body{
+      background-color: #f8f9fa;
+  }
+</style>
+
+<div class="container" style="max-width: 960px">
+  <div class="py-5 text-center">
+    <%= image_tag "/user_images/default_icon.png", class: "d-block mx-auto mb-4", width: "100" %>
+    <h2>新規登録</h2>
+    <p class="lead">Amicaへようこそ！<br/>Amicaを利用する前にあなたのことを教えて下さい！</p>
+  </div>
+  <p><%= devise_error_messages! %></p>
+  <%= form_for(resource, as: resource_name, url: users_confirm_path) do |f| %>
+    <div class="row g-3">
+      <div class="col-md-12">
         <div class="row g-3">
-          <div class="col-md-12">
-            <div class="row g-3">
-              <div class="col-sm-6">
-                <%= f.label "本名(2~20文字)", class:"form-label" %>
-                <%= f.text_field :name, class:"form-control" ,id:"name",placeholder: "Name",maxlength:"20"%>
-              </div>
-              <div class="col-sm-6">
-                <%= f.label "ニックネーム(2~20文字)" , class:"form-label"%>
-                <%= f.text_field :nickname, class:"form-control" ,id:"nickname",placeholder: "NickName",maxlength:"20"%>
-              </div>
+          <div class="col-sm-6">
+            <%= f.label "本名(2~20文字)", class: "form-label" %>
+            <%= f.text_field :name, class: "form-control", id: "name", placeholder: "Name", maxlength: "20" %>
+          </div>
+          <div class="col-sm-6">
+            <%= f.label "ニックネーム(2~20文字)", class: "form-label" %>
+            <%= f.text_field :nickname, class: "form-control", id: "nickname", placeholder: "NickName", maxlength: "20" %>
+          </div>
 
-              <div class="col-12">
-                <%= f.label "ユーザーID(先頭のみ英語 半角英数字(_) 1~20文字)", class:"form-label" %>
-                <div class="input-group">
-                  <span class="input-group-text">@</span>
-                  <%= f.text_field :userid ,class:"form-control",id:"userid",placeholder: "UserID" ,maxlength:"20"%>
-                </div>
-              </div>
-
-              <hr class="my-4">
-
-              <%= f.fields_for :profile do |pf|%>
-                <div class="col-12">
-                  <%= pf.label "学科" , class:"form-label"%>
-                  <br />
-                  <%= pf.select :grade, grade, {}, class:'form-select', id: "grade", include_blank: "", autocomplete:"grade" %>
-                </div>
-
-                <div class="col-sm-6">
-                <%= pf.label "クラス 例:2T1→1を入力 (無い場合は0を入力)", class:"form-label" %>
-                <%= pf.text_field :school_class, class:"form-control" ,id:"school_class",placeholder: "クラス",maxlength:"1"%>
-                </div>
-
-                <div class="col-sm-6">
-                  <%= pf.label "出席番号 (無い場合は0を入力)" , class:"form-label"%>
-                  <%= pf.text_field :number, class:"form-control" ,id:"number",placeholder: "出席番号",maxlength:"2"%>
-                </div>
-
-                <div class="col-sm-6">
-                  <%= pf.label "学籍番号 (無い場合は0000000を入力)" , class:"form-label"%>
-                  <%= pf.text_field :student_id, class:"form-control" ,id:"student_number",placeholder: "学籍番号",maxlength:"7"%>
-                </div>
-
-                <hr class="my-4">
-
-                <div class="col-12">
-                <%= f.label "パスワード(8~24文字 半角英数字(大文字小文字)、記号 [$!@_%^*&()] が使用できます)"%>
-                <%= f.password_field :password, class:"form-control", autocomplete: "off" ,maxlength:"24"%>
-                </div>
-
-                <div class="col-12">
-                  <%= f.label "パスワード(確認)" %><br />
-                  <%= f.password_field :password_confirmation, class:"form-control", autocomplete: "off" ,maxlength:"24"%>
-                </div>
-
-                <%= f.hidden_field :confirmation_token %>
-                <hr class="my-4">
-              <% end %>
-
-              <%= f.submit "登録",class:"w-100 btn btn-primary btn-lg mb-5"%>
+          <div class="col-12">
+            <%= f.label "ユーザーID(先頭のみ英語 半角英数字(_) 1~20文字)", class: "form-label" %>
+            <div class="input-group">
+              <span class="input-group-text">@</span>
+              <%= f.text_field :userid, class: "form-control", id: "userid", placeholder: "UserID", maxlength: "20" %>
             </div>
           </div>
+
+          <hr class="my-4">
+
+          <%= f.fields_for :profile do |pf| %>
+            <div class="col-12">
+              <%= pf.label "学科", class: "form-label" %>
+              <br/>
+              <%= pf.select :grade, grade, {}, class: 'form-select', id: "grade", include_blank: "", autocomplete: "grade" %>
+            </div>
+
+            <div class="col-sm-6">
+              <%= pf.label "クラス 例:2T1→1を入力 (無い場合は0を入力)", class: "form-label" %>
+              <%= pf.text_field :school_class, class: "form-control", id: "school_class", placeholder: "クラス", maxlength: "1" %>
+            </div>
+
+            <div class="col-sm-6">
+              <%= pf.label "出席番号 (無い場合は0を入力)", class: "form-label" %>
+              <%= pf.text_field :number, class: "form-control", id: "number", placeholder: "出席番号", maxlength: "2" %>
+            </div>
+
+            <div class="col-sm-6">
+              <%= pf.label "学籍番号 (無い場合は0000000を入力)", class: "form-label" %>
+              <%= pf.text_field :student_id, class: "form-control", id: "student_number", placeholder: "学籍番号", maxlength: "7" %>
+            </div>
+
+            <hr class="my-4">
+
+            <div class="col-12">
+              <%= f.label "パスワード(8~24文字 半角英数字(大文字小文字)、記号 [$!@_%^*&()] が使用できます)" %>
+              <%= f.password_field :password, class: "form-control", autocomplete: "off", maxlength: "24" %>
+            </div>
+
+            <div class="col-12">
+              <%= f.label "パスワード(確認)" %><br/>
+              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off", maxlength: "24" %>
+            </div>
+
+            <%= f.hidden_field :confirmation_token %>
+            <hr class="my-4">
+          <% end %>
+
+          <%= f.submit "登録", class: "w-100 btn btn-primary btn-lg mb-5" %>
         </div>
-      <% end %>
-    </main>
-  </div>
-</body>
+      </div>
+    </div>
+  <% end %>
+</div>
