--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,7 +4,7 @@
   <h3 class="notice"><%= alert %></h3>
 </div>
 
-<main class="mx-3">
+<div class="mx-3">
   <div class="container">
 
     <div class="row">
@@ -92,4 +92,4 @@
       </div>
     </div>
   </div>
-</main>
+</div>
