--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
-<main class="container">
+<div class="container">
   <div class="d-flex align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
     <div class="lh-1">
       <nav class="navbar">
@@ -39,4 +39,4 @@
       </div>
     </div>
   </div>
-</main>
+</div>
