--- a/app/views/searches/community.html.erb
+++ b/app/views/searches/community.html.erb
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
   <h2 class="text-center"><%= params[:name] %>のコミュニティ検索結果</h2>
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">コミュニティリスト (<%= @communities.count %>)</h6>
@@ -13,4 +13,4 @@
       <% end %>
     <% end %>
   </div>
-</main>
+</div>
