--- a/app/views/searches/user.html.erb
+++ b/app/views/searches/user.html.erb
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
   <h2 class="text-center"><%= params[:name] %>のユーザー検索結果</h2>
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">ユーザーリスト (<%= @users.count %>)</h6>
@@ -14,4 +14,4 @@
       <% end %>
     <% end %>
   </div>
-</main>
+</div>
