--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,33 +1,10 @@
 <%= stylesheet_link_tag 'timelines' %>
 <%= javascript_pack_tag 'timeline/main'%>
 
-<style>
-    .lity {
-        z-index: 10002;
-    }
-
-    .send {
-        margin-right: 2px;
-        margin-bottom: 2px;
-        color: #0d6efd;
-        border: none;
-    }
-</style>
-<%= render 'timelines/nav', page:"friends" %>
-
+<%= render 'timelines/nav', page:@page %>
 
 <div class="container">
   <%= render "timelines/form", create:@create %>
-  <% @posts.each do |p| %>
-    <% if matchers?(@user,p.user) || p.user == current_user %>
-      <%= link_to timeline_path(p.id) do %>
-        <div class="my-3 p-3 bg-white rounded shadow-sm">
-          <div id="post_<%= p.id %>">
-            <%= render "timelines/post", post: p, post_model: @post %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  <% end %>
+  <%= render partial:"timelines/post", collection:@posts , as: :post, locals: { post_model: @post } %>
   <%= render "layouts/pagenate", pagenate: @posts %>
 </div>
