--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -5,8 +5,8 @@
 
 <div class="container light">
   <div class="my-5 p-3 bg-white rounded shadow-sm ">
-    <%= render "timelines/post", post: @post, post_model: @post_m%>
-    <div class="mt-3 p-3 bg-white ">
+    <%= render "timelines/post", post: @post, post_model: @posts%>
+    <div class="mt-3 py-3 bg-white ">
       <%= render 'comments/form', post: @post, comment: @comment %>
     </div>
   </div>
