--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Resend unlock instructions</h2>
+<p class="h1 mt-4" style="font-weight: normal; text-align: center;">ロック解除のメールを受け取りませんでしたか？</p>
+<div class="text-center mt-5">
 
-<%= form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <p class="vw"><%= "ここではメールアドレスがロックされているかどうかの確認を取ることができ" %>
+    <br>
+    <%= "ます。＠の後に、指定された「gn.iwasaki.ac.jp」を入れてください。" %></p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="actions">
-    <%= f.submit "Resend unlock instructions" %>
-  </div>
-<% end %>
+    <div class="form-check-inline w-50 mt-5">
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", id: "inputEmail", class: "form-control",:placeholder=>"email" ,style: "margin-bottom: 30px" %>
+    </div>
 
+    <div class="actions mt-3">
+      <%= f.submit "送信" , class:"w-25 btn btn-lg btn-primary "%>
+    </div>
+  <% end %>
+  <br>
 <%= render "devise/shared/links" %>
+</div>
