--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -24,11 +24,7 @@
         <div id="user_icon">
           <label>
             <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
-            <% if @community.icon.nil? %>
-              <%= image_tag "default_icon", :size => '200x200', class: "user_image", style: "width:200px;height:200px" %>
-            <% else %>
-              <%= image_tag "/communities_image/#{@community.icon}", :size => '200x200', class: "user_image", style: "width:200px;height:200px" %>
-            <% end %>
+            <%= image_tag "default_icon.png", :size => '200x200', class: "user_image", style: "width:200px;height:200px" %>
           </label>
         </div>
         <label>
@@ -76,7 +72,7 @@
             <div class="form_wrapper">
               <div id="image-wrapper">
                 <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default", accept: 'image/jpg,image/jpeg,image/png' %>
-                <%= f.hidden_field :icon, id: "image" %>
+                <%= f.hidden_field :image, id: "image" %>
                 <%= f.hidden_field :image_x, id: "image_x" %>
                 <%= f.hidden_field :image_y, id: "image_y" %>
                 <%= f.hidden_field :image_w, id: "image_w" %>
@@ -84,11 +80,7 @@
                 <%= f.hidden_field :aspect_numerator, id: "aspect_numerator", value: "1.0" %>
                 <%= f.hidden_field :aspect_denominator, id: "aspect_denominator", value: "1.0" %>'
                 <div id="prev_img">
-                  <% if @community.icon.nil? %>
-                    <%= image_tag "default_icon", :size => '200x200', class: "user_image" %>
-                  <% else %>
-                    <%= image_tag "/communities_image/#{@community.icon}", :size => '200x200', class: "user_image" %>
-                  <% end %>
+                  <%= image_tag @community.decorate.image, :size => '200x200', class: "user_image" %>
                 </div>
               </div>
             </div>
