--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -31,8 +31,9 @@
             </div>
           </div>
 
+          <div id="user_search_result"></div>
+
           <% if @favorite_users.size > 0 %>
-            <div id="favorite_user"></div>
             <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample1">
               お気に入り
             </button>
@@ -76,9 +77,9 @@
               </nav>
             </div>
           </div>
-
+          <div id="community_search_result"></div>
           <% if @favorite_communities.size > 0 %>
-            <div id="favorite_community"></div>
+
             <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">お気に入り</button>
             <div class="collapse show mb-1" id="collapseExample3">
               <%= render partial: 'pages/community', collection: @favorite_communities, as: :community, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
