--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -48,14 +48,14 @@
          <div class="w-100 d-flex ">
            <label>
              <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#imageModal"></button>
-             <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"> <i class="fas fa-image"></i></span>
+             <span class="m-1" style="font-size: 1.6rem;color: #f0c065"> <i class="fas fa-image"></i></span>
            </label>
           <input type="hidden" id="room_id" value= <%= @room.id %> data-behavior="chat_speaker">
           <input type="hidden" id="user_id" value= <%= current_user.id %> data-behavior="chat_speaker">
           <%= text_area_tag  :content, nil, class:"form-control", placeholder:"message", data: {behavior: "chat_speaker"},id:"content" %>
           <label><!-- Button trigger modal -->
              <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
-             <span class="m-1" style="font-size: 1.6rem;color: #5e5e5e"><i class="fas fa-paper-plane"></i></span>
+             <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
            </label>
            <label>
              <button style="display: none" type="button" class="btn btn-primary form-control" data-bs-toggle="modal" data-bs-target="#menuModal"></button>
@@ -116,16 +116,18 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="imageModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="imageModalLabel">画像送信</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-<input type="image">
-
+          <input type="file" id="image_uploader" accept="image/jpg,image/jpeg,image/png" data-behavior="chat_speaker">
       </div>
+      <div id="image_preview" style="text-align: center;"></div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <label><!-- Button trigger modal -->
+          <button id="submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
+          <span class="m-1" style="font-size: 1.6rem;color: #1b8798"><i class="fas fa-paper-plane"></i></span>
+        </label>
       </div>
     </div>
   </div>
