未完成　運営からのメッセージ型完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,7 @@
           <ul class="navbar-nav d-flex">
             <li class="nav-item">
               <%= link_to operation_messages_path, class: "icons nav-link" do %>
-                <i class="fas fa-exclamation-circle"></i>お知らせ<span class="notice badge bg-light text-dark rounded-pill align-text-bottom">100</span>
-              <% end %>
-              <%= link_to pages_path, class: "icons nav-link" do %>
-                <i class="fas fa-bell"></i>通知<span class="notice badge bg-light text-dark rounded-pill align-text-bottom">100</span>
+                <i class="fas fa-bell"></i>お知らせ<span class="notice badge bg-light text-dark rounded-pill align-text-bottom">100</span>
               <% end %>
             </li>
             <li class="nav-item">
