--- a/app/views/operation_messages/edit.html.erb
+++ b/app/views/operation_messages/edit.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div>
     <%= f.label :中身 %><br>
-    <%= f.text_area :content, :placeholder =>"#{@post.content}" %>
+    <%= f.text_area :content,size:"50x30", :placeholder =>"#{@post.content}" %>
   </div>
   <div><%= f.submit "更新する" %></div>
 <% end %>
