--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,2 +1,3 @@
 $("#comments_area").html("<%= j(render 'comments/index', comments: @post.comments.order(created_at: :desc), post:@post,user:@user) %>");
+$("#comment_count").html("<%= @count %>")
 $("textarea").val('');
