--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -51,42 +51,7 @@
                 <small>学籍番号</small></h3>
             </li>
           </ul>
-          <% if current_user.id != @user.id %>
-            <div class="actions ">
-              <%= link_to 'チャット',
-                          chat_path(@user.userid),
-                          style: "color:#FFF;",
-                          class:"btn btn-primary followbtn"
-              %>
-            </div>
-            <% unless current_user.following?(@user) %>
-              <div class="actions ">
-                <%= link_to 'フォロー',
-                            profile_relationships_path(@user.userid),
-                            method: :post,
-                            style: "color:#FFF;",
-                            class:"btn btn-primary followbtn"
-                %>
-              </div>
-            <% else %>
-              <div class="actions">
-                <%= link_to 'フォロー解除',
-                            profile_relationship_path(@user.userid),
-                            method: :delete,
-                            style: "color:#FFF;",
-                            class:"btn btn-primary followbtn"
-                %>
-              </div>
-            <% end %>
-          <% end %>
-           <% if current_user.id == @user.id %>
-              <div class="actions">
-                <%= link_to '編集',
-                            edit_profile_path,
-                            style: "color:#FFF;",
-                            class:"btn btn-primary followbtn" %>
-              </div>
-          <% end %>
+
 
           <div class="actions">
             <% if current_user.id != @user.id %>
@@ -95,6 +60,7 @@
               <% else %>
                   <%= link_to 'フォロー', profile_relationships_path(@user.userid), method: :post, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
               <% end %>
+              <%= link_to 'チャット',chat_path(@user.userid),style: "color:#FFF;",class:"btn btn-primary followbtn"%>
             <% else %>
               <%= link_to '編集', edit_profile_path, style: "color:#FFF;", class: "btn btn-primary followbtn" %>
             <% end %>
