--- a/app/views/contact_mailer/contact_mail.text.erb
+++ b/app/views/contact_mailer/contact_mail.text.erb
@@ -5,7 +5,7 @@
 
 お問い合わせ内容
 -------------------------------------------
-<%= @contact.message %>
+<%= @contact.message %>a
 -------------------------------------------
 
 -------------------------------------------
