仮完成　運営からメッセージ

--- a/app/views/operation_messages/index.html.erb
+++ b/app/views/operation_messages/index.html.erb
@@ -5,7 +5,7 @@
     <h1>通知</h1>
   </div>
   <div class="col-6 m-auto">
-    <h1>運営からのお知らせ！</h1>
+    <h1>運営からのお知らせ！！</h1>
 <%if current_user.admin==true %>
   <%= link_to new_operation_message_path class: "icons nav-link" do %>
     <i class="fas fa-exclamation-circle"></i>新規作成<br>
