--- a/app/views/pages/tutorial.html.erb
+++ b/app/views/pages/tutorial.html.erb
@@ -1,3 +1,7 @@
+<%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag 'home/index' %>
+
 <div class="text-center">
   <h1>Amicaへようこそ</h1>
   <p>これから、チュートリアルを開始します。</p>
@@ -33,4 +37,7 @@
     自分の興味のあるコミュニティを作成或いは検索をし、同じ事に興味がある方々とのコミュニケーションを楽しみましょう。</p>
 
   <p>説明は以上です。それでは早速Amicaを使ってみましょう。</p>
+
+
+  <a href="tutorial">ページ上に戻る</a>
 </div>
