--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -95,8 +95,7 @@
       </span>
         <div class="ms-2">
           <label>
-            <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=
-              <% post.id %>></button>
+            <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever=<%= post.id %>></button>
             <i class="fas fa-bullhorn"></i>
           </label>
         </div>
