chatに画像投稿実装開始

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -122,7 +122,7 @@
       <div class="modal-body">
           <input type="file" id="image_uploader" accept="image/jpg,image/jpeg,image/png" data-behavior="chat_speaker">
       </div>
-      <div id="image_preview" style="text-align: center;"></div>
+      <img id="image_preview" src="" style="text-align: center;" alt="">
       <div class="modal-footer">
         <label><!-- Button trigger modal -->
           <button id="image_submit_button" style="display: none" type="submit" class="btn btn-primary form-control" ></button>
