--- a/app/views/comments/_hide_comments.html.erb
+++ b/app/views/comments/_hide_comments.html.erb
@@ -1,3 +1,29 @@
+<div class="modal fade" id="exampleModal2<%= comment.id %>" tabindex="-1" aria-labelledby="exampleModalLabel<%= comment.id %>" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">通報</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= form_for(@report, url: timeline_reports_path(comment.id)) do |f| %>
+          <%= f.hidden_field :user_id, id: "user_id ", class: "form-control", value: current_user.id %>
+          <%= f.hidden_field :comment_id, id: "comment_id", class: "form-control", value: comment.id %>
+          <%= f.hidden_field :reported_user_id, id: "reported_user_id ", class: "form-control", value: comment.user.id %>
+          <div> <%= comment.user.nickname %></div>
+          <div> <%= comment.comment %></div>
+          <%= f.text_area :message, id: "message", class: "form-control" %><br>
+          <div class="modal-footer">
+            <%= f.submit "送信", class: "btn btn-lg btn-secondary fw-bold border-white bg-blue", style: "margin-right: 10px; width: 150px;color:#FFF" %>
+            <%= f.submit "クリア", type: :reset, class: "btn btn-lg btn-secondary fw-bold border-white bg-blue", style: "margin-right: 10px; width: 150px;color:#FFF" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="my-3 p-3 bg-white rounded shadow-sm">
   <div class="d-flex text-muted">
     <%= link_to profile_path(post.user), style: "color:black" do %>
@@ -13,7 +39,14 @@
       <span class="spans text-dark" style="font-size:18px; margin: 0;"><%= comment.comment %></span>
     </p>
   </div>
+
   <div class="text-end">
+    <span class="ms-2">
+            <label>
+              <button type="button" class="btn btn-primary" style="display: none" data-bs-toggle="modal" data-bs-target="#exampleModal2<%= comment.id %>" data-bs-whatever=<%= comment.id %>></button>
+              <i class="fas fa-bullhorn"></i>
+            </label>
+          </span>
     <% if post.user == current_user %>
       <%= link_to timeline_comment_path(post.id, comment.id), method: :delete, remote: true do %>
         <i class="far fa-trash-alt"></i>
