--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'timelines' %>
+<%= stylesheet_pack_tag 'timelines' %>
 <%= javascript_pack_tag 'timeline/main' %>
 <style>
     .send {
