--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
 <h2 class="mb-4">アカウント情報変更</h2>
 
 <div id="contact_form">
