--- a/app/views/mailer/new.html.erb
+++ b/app/views/mailer/new.html.erb
@@ -1,6 +1,6 @@
 
-<%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag 'contacts', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'contacts', media: 'all', 'data-turbolinks-track': 'reload' %>
 <h4><%= flash.now[:notice] %></h4>
 
 <section class="ask">
