--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag 'profiles_show', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'profiles_show', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="main container">
   <div class="row">
     <div class="col-md-12 text-center" style="z-index: 1;">
