--- a/app/views/communities/_community.html.erb
+++ b/app/views/communities/_community.html.erb
@@ -1,5 +1,5 @@
 <% unless community_ban?(community) %>
-  <%= stylesheet_link_tag "community_index" %>
+  <%= stylesheet_pack_tag "community_index" %>
   <div class="community">
     <%= link_to community_path(community.id), class: "text-dark", style: "text-decoration: none" do %>
       <div class="col">
