--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'profiles/edit' %>
 
 <script>
