--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'communities' %>
+<%= stylesheet_pack_tag 'communities' %>
 <%= javascript_pack_tag "communities/new" %>
 <%= javascript_pack_tag 'profiles/edit' %>
 
