--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
 <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
 <%= javascript_pack_tag 'home/index' %>
