--- a/app/views/profiles/_badge.html.erb
+++ b/app/views/profiles/_badge.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'profiles_show', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_pack_tag 'profiles_show', media: 'all', 'data-turbolinks-track': 'reload' %>
 <div class="amica-badge register-badge">
   <span class="at-badge" style="color: rgba(29,144,190,0.8)"><i class="fas fa-smile-wink"></i></span>
   <div class="badge-description"><%= @user.created_at.strftime('%Y/%m/%d') %> Amicaに登録した記念！</div>
